Refactor: Localize sticky headers and introduce staggered grid support
This commit refactors the sticky header functionality to support localization and introduces a new `rememberStickyHeaderItemStaggered` composable for staggered grids.

- `rememberStickyHeaderItem.kt`:
    - Updated to use localized strings for month names ("January" through "December") in addition to "Today" and "Yesterday".
    - Header text is now consistently title-cased.
- `rememberStickyHeaderItemStaggered.kt`:
    - New composable function specifically for `LazyStaggeredGridState`.
    - Mirrors the localization and title-casing logic of `rememberStickyHeaderItem`.
- `MediaGridView.kt`:
    - Now conditionally uses `rememberStickyHeaderItem` or `rememberStickyHeaderItemStaggered` based on the `useStaggeredGrid` setting.
    - Manages separate states (`gridState` and `staggeredGridState`) for regular and staggered grids.
- `values-de-rDE/strings.xml`:
    - Added "Beta" string translation.

--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -113,7 +113,7 @@
     <string name="trash_incompatible_title">Manche Dateien können nicht in den Papierkorb verschoben werden!</string>
     <string name="trash_incompatible_summary">Diese Dateien werden stattdessen endgültig gelöscht.</string>
     <string name="error_toast">Es ist ein Fehler aufgetreten!</string>
-    <string name="beta"></string>
+    <string name="beta">Beta</string>
     <string name="remove_metadata">Metadaten entfernen</string>
     <string name="remove_location">Standort entfernen</string>
     <string name="description">Beschreibung</string>
