Refactor: Rename Crop to Transform in editor
This commit renames the "Crop" functionality within the image editor to "Transform".

- `EditorItems.Crop` is now `EditorItems.Transform` with a corresponding icon update.
- `EditorDestination.Crop` is now `EditorDestination.Transform`.
- Updated references in `EditorNavigator.kt` and `EditScreen.kt` to reflect the name change.

Additionally, the blur effect in `ZoomablePagerImage.kt` has been adjusted:
- Blur alpha changed from `0.7f` to `0.6f`.
- Blur radius changed from `100.dp` to `90.dp`.
- Added `BlurredEdgeTreatment.Unbounded` to the blur modifier.

--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -406,6 +406,7 @@
     <string name="analysis_of_media">Analysis of Media</string>
     <string name="media_in_database">Media in database: %1$s</string>
     <string name="transition_effect">Transition effect</string>
+    <string name="transform">Transform</string>
     <plurals name="item_count">
         <item quantity="other">%s mục</item>
     </plurals>
