--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -406,6 +406,7 @@
     <string name="analysis_of_media">Analisi dei Media</string>
     <string name="media_in_database">Media nel database: %1$s</string>
     <string name="transition_effect">Effetti di transizione</string>
+    <string name="transform">Transform</string>
     <plurals name="item_count">
         <item quantity="one">%s elemento</item>
         <item quantity="other">%s elementi</item>
